--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.10",
-    "ng-tags-input": "~2.3.0"
+    "ng-tags-input": "~2.3.0",
+    "ng-flow": "~2"
   },
   "devDependencies": {
     "angular-mocks": ">=1.3.*",
