--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.10",
     "ng-tags-input": "~2.3.0",
-    "ng-flow": "~2"
+    "ng-file-upload": "~5.0.9",
+    "ng-file-upload-shim": "~5.0.9"
   },
   "devDependencies": {
     "angular-mocks": ">=1.3.*",
